Formal Languages  Automata and Compilers/programming language and compiler/y.output
Terminals unused in grammar

   PROGRAM
   charValue
   intValue
   floatValue
   stringValue


Grammar

    0 $accept: s $end

    1 s: program

    2 program: program options
    3        | options

    4 options: varDeclaration
    5        | functionDef
    6        | booleanExpression
    7        | block
    8        | moduleDef
    9        | varAssign ';'
   10        | eval ';'

   11 varDeclaration: VAR declarationList ';'
   12               | CONST_VAR constDeclarationList ';'

   13 declarationList: declarationList ',' ID ':' TIP
   14                | declarationList ',' varAssign ':' TIP
   15                | ID ':' TIP
   16                | varAssign ':' TIP

   17 constDeclarationList: constDeclarationList ',' varAssign ':' TIP
   18                     | varAssign ':' TIP

   19 moduleDef: MODULE ID '{' moduleConstructor moduleState HANDLERS '{' moduleHandlers '}' '}'
   20          | MODULE ID '{' moduleConstructor moduleState HANDLERS '{' '}' '}'

   21 moduleAccess: ID '.' ID
   22             | ID '.' functionCall

   23 moduleConstructor: CONSTRUCTOR '(' listaParams ')' '{' commands '}'
   24                  | CONSTRUCTOR '(' ')' '{' commands '}'
   25                  | CONSTRUCTOR '(' ')' '{' '}'

   26 moduleState: STATE '{' varDeclaration '}'
   27            | STATE '{' '}'

   28 moduleHandlers: moduleHandlers functionDef
   29               | functionDef

   30 varAssign: ID ASSIGN booleanExpression
   31          | ID ASSIGN '$' functionCall
   32          | ID ASSIGN '{' listaArgs '}'

   33 bool_char_string: BOOL
   34                 | CHAR
   35                 | STRING

   36 stringExpression: '!' STRING

   37 arithmeticExpression: arithmeticExpression NR_OPERATION ID
   38                     | arithmeticExpression NR_OPERATION INT
   39                     | arithmeticExpression NR_OPERATION FLOAT
   40                     | arithmeticExpression NR_OPERATION functionCall
   41                     | arithmeticExpression NR_OPERATION moduleAccess
   42                     | ID
   43                     | INT
   44                     | FLOAT
   45                     | moduleAccess
   46                     | functionCall

   47 booleanExpression: booleanExpression BOOL_OPERATION '!' ID
   48                  | booleanExpression BOOL_OPERATION bool_char_string
   49                  | booleanExpression BOOL_OPERATION arithmeticExpression
   50                  | booleanExpression BOOL_OPERATION stringExpression
   51                  | booleanExpression BOOL_OPERATION comparisonExpression
   52                  | bool_char_string
   53                  | arithmeticExpression
   54                  | comparisonExpression
   55                  | stringExpression

   56 comparisonExpression: arithmeticExpression COMP arithmeticExpression
   57                     | arithmeticExpression COMP bool_char_string
   58                     | bool_char_string COMP arithmeticExpression

   59 functionCall: ID '(' listaArgs ')'
   60             | ID '(' ')'

   61 functionDef: FUNC ID '(' listaParams ')' ':' TIP '{' commands '}'

   62 listaParams: listaParams ',' ID ':' TIP
   63            | ID ':' TIP

   64 listaArgs: listaArgs ',' booleanExpression
   65          | listaArgs ',' varDeclaration
   66          | booleanExpression
   67          | varDeclaration

   68 block: ifBlock
   69      | forBlock
   70      | whileBlock

   71 ifBlock: IF '(' booleanExpression ')' '{' commands '}'
   72        | IF '(' booleanExpression ')' '{' commands '}' ELSE '{' commands '}'
   73        | IF '(' booleanExpression ')' '{' commands '}' elseIfBlock ELSE '{' commands '}'

   74 elseIfBlock: elseIfBlock ELSE IF '{' commands '}'
   75            | ELSE IF '{' commands '}'

   76 forBlock: FOR '(' varAssign ';' booleanExpression ';' varAssign ')' '{' commands '}'

   77 whileBlock: WHILE '(' booleanExpression ')' '{' commands '}'

   78 commands: commands varDeclaration
   79         | commands varAssign ';'
   80         | commands functionCall ';'
   81         | commands ifBlock
   82         | commands forBlock
   83         | commands whileBlock
   84         | varDeclaration
   85         | varAssign ';'
   86         | functionCall ';'

   87 eval: 'E' '(' booleanExpression ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 36 47
'$' (36) 31
'(' (40) 23 24 25 59 60 61 71 72 73 76 77 87
')' (41) 23 24 25 59 60 61 71 72 73 76 77 87
',' (44) 13 14 17 62 64 65
'.' (46) 21 22
':' (58) 13 14 15 16 17 18 61 62 63
';' (59) 9 10 11 12 76 79 80 85 86
'E' (69) 87
'{' (123) 19 20 23 24 25 26 27 32 61 71 72 73 74 75 76 77
'}' (125) 19 20 23 24 25 26 27 32 61 71 72 73 74 75 76 77
error (256)
VAR (258) 11
CONST_VAR (259) 12
ASSIGN (260) 30 31 32
FUNC (261) 61
MODULE (262) 19 20
BOOL (263) 33
CONSTRUCTOR (264) 23 24 25
STATE (265) 26 27
HANDLERS (266) 19 20
BOOL_OPERATION (267) 47 48 49 50 51
COMP (268) 56 57 58
IF (269) 71 72 73 74 75
ELSE (270) 72 73 74 75
FOR (271) 76
WHILE (272) 77
NR_OPERATION (273) 37 38 39 40 41
PROGRAM (274)
FLOAT (275) 39 44
CHAR (276) 34
STRING (277) 35 36
INT (278) 38 43
charValue (279)
intValue (280)
floatValue (281)
stringValue (282)
TIP (283) 13 14 15 16 17 18 61 62 63
ID (284) 13 15 19 20 21 22 30 31 32 37 42 47 59 60 61 62 63


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
s (42)
    on left: 1, on right: 0
program (43)
    on left: 2 3, on right: 1 2
options (44)
    on left: 4 5 6 7 8 9 10, on right: 2 3
varDeclaration (45)
    on left: 11 12, on right: 4 26 65 67 78 84
declarationList (46)
    on left: 13 14 15 16, on right: 11 13 14
constDeclarationList (47)
    on left: 17 18, on right: 12 17
moduleDef (48)
    on left: 19 20, on right: 8
moduleAccess (49)
    on left: 21 22, on right: 41 45
moduleConstructor (50)
    on left: 23 24 25, on right: 19 20
moduleState (51)
    on left: 26 27, on right: 19 20
moduleHandlers (52)
    on left: 28 29, on right: 19 28
varAssign (53)
    on left: 30 31 32, on right: 9 14 16 17 18 76 79 85
bool_char_string (54)
    on left: 33 34 35, on right: 48 52 57 58
stringExpression (55)
    on left: 36, on right: 50 55
arithmeticExpression (56)
    on left: 37 38 39 40 41 42 43 44 45 46, on right: 37 38 39 40 41
    49 53 56 57 58
booleanExpression (57)
    on left: 47 48 49 50 51 52 53 54 55, on right: 6 30 47 48 49 50
    51 64 66 71 72 73 76 77 87
comparisonExpression (58)
    on left: 56 57 58, on right: 51 54
functionCall (59)
    on left: 59 60, on right: 22 31 40 46 80 86
functionDef (60)
    on left: 61, on right: 5 28 29
listaParams (61)
    on left: 62 63, on right: 23 61 62
listaArgs (62)
    on left: 64 65 66 67, on right: 32 59 64 65
block (63)
    on left: 68 69 70, on right: 7
ifBlock (64)
    on left: 71 72 73, on right: 68 81
elseIfBlock (65)
    on left: 74 75, on right: 73 74
forBlock (66)
    on left: 76, on right: 69 82
whileBlock (67)
    on left: 77, on right: 70 83
commands (68)
    on left: 78 79 80 81 82 83 84 85 86, on right: 23 24 61 71 72 73
    74 75 76 77 78 79 80 81 82 83
eval (69)
    on left: 87, on right: 10


State 0

    0 $accept: . s $end

    VAR        shift, and go to state 1
    CONST_VAR  shift, and go to state 2
    FUNC       shift, and go to state 3
    MODULE     shift, and go to state 4
    BOOL       shift, and go to state 5
    IF         shift, and go to state 6
    FOR        shift, and go to state 7
    WHILE      shift, and go to state 8
    FLOAT      shift, and go to state 9
    CHAR       shift, and go to state 10
    STRING     shift, and go to state 11
    INT        shift, and go to state 12
    ID         shift, and go to state 13
    '!'        shift, and go to state 14
    'E'        shift, and go to state 15

    s                     go to state 16
    program               go to state 17
    options               go to state 18
    varDeclaration        go to state 19
    moduleDef             go to state 20
    moduleAccess          go to state 21
    varAssign             go to state 22
    bool_char_string      go to state 23
    stringExpression      go to state 24
    arithmeticExpression  go to state 25
    booleanExpression     go to state 26
    comparisonExpression  go to state 27
    functionCall          go to state 28
    functionDef           go to state 29
    block                 go to state 30
    ifBlock               go to state 31
    forBlock              go to state 32
    whileBlock            go to state 33
    eval                  go to state 34


State 1

   11 varDeclaration: VAR . declarationList ';'

    ID  shift, and go to state 35

    declarationList  go to state 36
    varAssign        go to state 37


State 2

   12 varDeclaration: CONST_VAR . constDeclarationList ';'

    ID  shift, and go to state 38

    constDeclarationList  go to state 39
    varAssign             go to state 40


State 3

   61 functionDef: FUNC . ID '(' listaParams ')' ':' TIP '{' commands '}'

    ID  shift, and go to state 41


State 4

   19 moduleDef: MODULE . ID '{' moduleConstructor moduleState HANDLERS '{' moduleHandlers '}' '}'
   20          | MODULE . ID '{' moduleConstructor moduleState HANDLERS '{' '}' '}'

    ID  shift, and go to state 42


State 5

   33 bool_char_string: BOOL .

    $default  reduce using rule 33 (bool_char_string)


State 6

   71 ifBlock: IF . '(' booleanExpression ')' '{' commands '}'
   72        | IF . '(' booleanExpression ')' '{' commands '}' ELSE '{' commands '}'
   73        | IF . '(' booleanExpression ')' '{' commands '}' elseIfBlock ELSE '{' commands '}'

    '('  shift, and go to state 43


State 7

   76 forBlock: FOR . '(' varAssign ';' booleanExpression ';' varAssign ')' '{' commands '}'

    '('  shift, and go to state 44


State 8

   77 whileBlock: WHILE . '(' booleanExpression ')' '{' commands '}'

    '('  shift, and go to state 45


State 9

   44 arithmeticExpression: FLOAT .

    $default  reduce using rule 44 (arithmeticExpression)


State 10

   34 bool_char_string: CHAR .

    $default  reduce using rule 34 (bool_char_string)


State 11

   35 bool_char_string: STRING .

    $default  reduce using rule 35 (bool_char_string)


State 12

   43 arithmeticExpression: INT .

    $default  reduce using rule 43 (arithmeticExpression)


State 13

   21 moduleAccess: ID . '.' ID
   22             | ID . '.' functionCall
   30 varAssign: ID . ASSIGN booleanExpression
   31          | ID . ASSIGN '$' functionCall
   32          | ID . ASSIGN '{' listaArgs '}'
   42 arithmeticExpression: ID .
   59 functionCall: ID . '(' listaArgs ')'
   60             | ID . '(' ')'

    ASSIGN  shift, and go to state 46
    '.'     shift, and go to state 47
    '('     shift, and go to state 48

    $default  reduce using rule 42 (arithmeticExpression)


State 14

   36 stringExpression: '!' . STRING

    STRING  shift, and go to state 49


State 15

   87 eval: 'E' . '(' booleanExpression ')'

    '('  shift, and go to state 50


State 16

    0 $accept: s . $end

    $end  shift, and go to state 51


State 17

    1 s: program .
    2 program: program . options

    VAR        shift, and go to state 1
    CONST_VAR  shift, and go to state 2
    FUNC       shift, and go to state 3
    MODULE     shift, and go to state 4
    BOOL       shift, and go to state 5
    IF         shift, and go to state 6
    FOR        shift, and go to state 7
    WHILE      shift, and go to state 8
    FLOAT      shift, and go to state 9
    CHAR       shift, and go to state 10
    STRING     shift, and go to state 11
    INT        shift, and go to state 12
    ID         shift, and go to state 13
    '!'        shift, and go to state 14
    'E'        shift, and go to state 15

    $default  reduce using rule 1 (s)

    options               go to state 52
    varDeclaration        go to state 19
    moduleDef             go to state 20
    moduleAccess          go to state 21
    varAssign             go to state 22
    bool_char_string      go to state 23
    stringExpression      go to state 24
    arithmeticExpression  go to state 25
    booleanExpression     go to state 26
    comparisonExpression  go to state 27
    functionCall          go to state 28
    functionDef           go to state 29
    block                 go to state 30
    ifBlock               go to state 31
    forBlock              go to state 32
    whileBlock            go to state 33
    eval                  go to state 34


State 18

    3 program: options .

    $default  reduce using rule 3 (program)


State 19

    4 options: varDeclaration .

    $default  reduce using rule 4 (options)


State 20

    8 options: moduleDef .

    $default  reduce using rule 8 (options)


State 21

   45 arithmeticExpression: moduleAccess .

    $default  reduce using rule 45 (arithmeticExpression)


State 22

    9 options: varAssign . ';'

    ';'  shift, and go to state 53


State 23

   52 booleanExpression: bool_char_string .
   58 comparisonExpression: bool_char_string . COMP arithmeticExpression

    COMP  shift, and go to state 54

    $default  reduce using rule 52 (booleanExpression)


State 24

   55 booleanExpression: stringExpression .

    $default  reduce using rule 55 (booleanExpression)


State 25

   37 arithmeticExpression: arithmeticExpression . NR_OPERATION ID
   38                     | arithmeticExpression . NR_OPERATION INT
   39                     | arithmeticExpression . NR_OPERATION FLOAT
   40                     | arithmeticExpression . NR_OPERATION functionCall
   41                     | arithmeticExpression . NR_OPERATION moduleAccess
   53 booleanExpression: arithmeticExpression .
   56 comparisonExpression: arithmeticExpression . COMP arithmeticExpression
   57                     | arithmeticExpression . COMP bool_char_string

    COMP          shift, and go to state 55
    NR_OPERATION  shift, and go to state 56

    $default  reduce using rule 53 (booleanExpression)


State 26

    6 options: booleanExpression .
   47 booleanExpression: booleanExpression . BOOL_OPERATION '!' ID
   48                  | booleanExpression . BOOL_OPERATION bool_char_string
   49                  | booleanExpression . BOOL_OPERATION arithmeticExpression
   50                  | booleanExpression . BOOL_OPERATION stringExpression
   51                  | booleanExpression . BOOL_OPERATION comparisonExpression

    BOOL_OPERATION  shift, and go to state 57

    $default  reduce using rule 6 (options)


State 27

   54 booleanExpression: comparisonExpression .

    $default  reduce using rule 54 (booleanExpression)


State 28

   46 arithmeticExpression: functionCall .

    $default  reduce using rule 46 (arithmeticExpression)


State 29

    5 options: functionDef .

    $default  reduce using rule 5 (options)


State 30

    7 options: block .

    $default  reduce using rule 7 (options)


State 31

   68 block: ifBlock .

    $default  reduce using rule 68 (block)


State 32

   69 block: forBlock .

    $default  reduce using rule 69 (block)


State 33

   70 block: whileBlock .

    $default  reduce using rule 70 (block)


State 34

   10 options: eval . ';'

    ';'  shift, and go to state 58


State 35

   15 declarationList: ID . ':' TIP
   30 varAssign: ID . ASSIGN booleanExpression
   31          | ID . ASSIGN '$' functionCall
   32          | ID . ASSIGN '{' listaArgs '}'

    ASSIGN  shift, and go to state 46
    ':'     shift, and go to state 59


State 36

   11 varDeclaration: VAR declarationList . ';'
   13 declarationList: declarationList . ',' ID ':' TIP
   14                | declarationList . ',' varAssign ':' TIP

    ';'  shift, and go to state 60
    ','  shift, and go to state 61


State 37

   16 declarationList: varAssign . ':' TIP

    ':'  shift, and go to state 62


State 38

   30 varAssign: ID . ASSIGN booleanExpression
   31          | ID . ASSIGN '$' functionCall
   32          | ID . ASSIGN '{' listaArgs '}'

    ASSIGN  shift, and go to state 46


State 39

   12 varDeclaration: CONST_VAR constDeclarationList . ';'
   17 constDeclarationList: constDeclarationList . ',' varAssign ':' TIP

    ';'  shift, and go to state 63
    ','  shift, and go to state 64


State 40

   18 constDeclarationList: varAssign . ':' TIP

    ':'  shift, and go to state 65


State 41

   61 functionDef: FUNC ID . '(' listaParams ')' ':' TIP '{' commands '}'

    '('  shift, and go to state 66


State 42

   19 moduleDef: MODULE ID . '{' moduleConstructor moduleState HANDLERS '{' moduleHandlers '}' '}'
   20          | MODULE ID . '{' moduleConstructor moduleState HANDLERS '{' '}' '}'

    '{'  shift, and go to state 67


State 43

   71 ifBlock: IF '(' . booleanExpression ')' '{' commands '}'
   72        | IF '(' . booleanExpression ')' '{' commands '}' ELSE '{' commands '}'
   73        | IF '(' . booleanExpression ')' '{' commands '}' elseIfBlock ELSE '{' commands '}'

    BOOL    shift, and go to state 5
    FLOAT   shift, and go to state 9
    CHAR    shift, and go to state 10
    STRING  shift, and go to state 11
    INT     shift, and go to state 12
    ID      shift, and go to state 68
    '!'     shift, and go to state 14

    moduleAccess          go to state 21
    bool_char_string      go to state 23
    stringExpression      go to state 24
    arithmeticExpression  go to state 25
    booleanExpression     go to state 69
    comparisonExpression  go to state 27
    functionCall          go to state 28


State 44

   76 forBlock: FOR '(' . varAssign ';' booleanExpression ';' varAssign ')' '{' commands '}'

    ID  shift, and go to state 38

    varAssign  go to state 70


State 45

   77 whileBlock: WHILE '(' . booleanExpression ')' '{' commands '}'

    BOOL    shift, and go to state 5
    FLOAT   shift, and go to state 9
    CHAR    shift, and go to state 10
    STRING  shift, and go to state 11
    INT     shift, and go to state 12
    ID      shift, and go to state 68
    '!'     shift, and go to state 14

    moduleAccess          go to state 21
    bool_char_string      go to state 23
    stringExpression      go to state 24
    arithmeticExpression  go to state 25
    booleanExpression     go to state 71
    comparisonExpression  go to state 27
    functionCall          go to state 28


State 46

   30 varAssign: ID ASSIGN . booleanExpression
   31          | ID ASSIGN . '$' functionCall
   32          | ID ASSIGN . '{' listaArgs '}'

    BOOL    shift, and go to state 5
    FLOAT   shift, and go to state 9
    CHAR    shift, and go to state 10
    STRING  shift, and go to state 11
    INT     shift, and go to state 12
    ID      shift, and go to state 68
    '{'     shift, and go to state 72
    '$'     shift, and go to state 73
    '!'     shift, and go to state 14

    moduleAccess          go to state 21
    bool_char_string      go to state 23
    stringExpression      go to state 24
    arithmeticExpression  go to state 25
    booleanExpression     go to state 74
    comparisonExpression  go to state 27
    functionCall          go to state 28


State 47

   21 moduleAccess: ID '.' . ID
   22             | ID '.' . functionCall

    ID  shift, and go to state 75

    functionCall  go to state 76


State 48

   59 functionCall: ID '(' . listaArgs ')'
   60             | ID '(' . ')'

    VAR        shift, and go to state 1
    CONST_VAR  shift, and go to state 2
    BOOL       shift, and go to state 5
    FLOAT      shift, and go to state 9
    CHAR       shift, and go to state 10
    STRING     shift, and go to state 11
    INT        shift, and go to state 12
    ID         shift, and go to state 68
    ')'        shift, and go to state 77
    '!'        shift, and go to state 14

    varDeclaration        go to state 78
    moduleAccess          go to state 21
    bool_char_string      go to state 23
    stringExpression      go to state 24
    arithmeticExpression  go to state 25
    booleanExpression     go to state 79
    comparisonExpression  go to state 27
    functionCall          go to state 28
    listaArgs             go to state 80


State 49

   36 stringExpression: '!' STRING .

    $default  reduce using rule 36 (stringExpression)


State 50

   87 eval: 'E' '(' . booleanExpression ')'

    BOOL    shift, and go to state 5
    FLOAT   shift, and go to state 9
    CHAR    shift, and go to state 10
    STRING  shift, and go to state 11
    INT     shift, and go to state 12
    ID      shift, and go to state 68
    '!'     shift, and go to state 14

    moduleAccess          go to state 21
    bool_char_string      go to state 23
    stringExpression      go to state 24
    arithmeticExpression  go to state 25
    booleanExpression     go to state 81
    comparisonExpression  go to state 27
    functionCall          go to state 28


State 51

    0 $accept: s $end .

    $default  accept


State 52

    2 program: program options .

    $default  reduce using rule 2 (program)


State 53

    9 options: varAssign ';' .

    $default  reduce using rule 9 (options)


State 54

   58 comparisonExpression: bool_char_string COMP . arithmeticExpression

    FLOAT  shift, and go to state 9
    INT    shift, and go to state 12
    ID     shift, and go to state 68

    moduleAccess          go to state 21
    arithmeticExpression  go to state 82
    functionCall          go to state 28


State 55

   56 comparisonExpression: arithmeticExpression COMP . arithmeticExpression
   57                     | arithmeticExpression COMP . bool_char_string

    BOOL    shift, and go to state 5
    FLOAT   shift, and go to state 9
    CHAR    shift, and go to state 10
    STRING  shift, and go to state 11
    INT     shift, and go to state 12
    ID      shift, and go to state 68

    moduleAccess          go to state 21
    bool_char_string      go to state 83
    arithmeticExpression  go to state 84
    functionCall          go to state 28


State 56

   37 arithmeticExpression: arithmeticExpression NR_OPERATION . ID
   38                     | arithmeticExpression NR_OPERATION . INT
   39                     | arithmeticExpression NR_OPERATION . FLOAT
   40                     | arithmeticExpression NR_OPERATION . functionCall
   41                     | arithmeticExpression NR_OPERATION . moduleAccess

    FLOAT  shift, and go to state 85
    INT    shift, and go to state 86
    ID     shift, and go to state 87

    moduleAccess  go to state 88
    functionCall  go to state 89


State 57

   47 booleanExpression: booleanExpression BOOL_OPERATION . '!' ID
   48                  | booleanExpression BOOL_OPERATION . bool_char_string
   49                  | booleanExpression BOOL_OPERATION . arithmeticExpression
   50                  | booleanExpression BOOL_OPERATION . stringExpression
   51                  | booleanExpression BOOL_OPERATION . comparisonExpression

    BOOL    shift, and go to state 5
    FLOAT   shift, and go to state 9
    CHAR    shift, and go to state 10
    STRING  shift, and go to state 11
    INT     shift, and go to state 12
    ID      shift, and go to state 68
    '!'     shift, and go to state 90

    moduleAccess          go to state 21
    bool_char_string      go to state 91
    stringExpression      go to state 92
    arithmeticExpression  go to state 93
    comparisonExpression  go to state 94
    functionCall          go to state 28


State 58

   10 options: eval ';' .

    $default  reduce using rule 10 (options)


State 59

   15 declarationList: ID ':' . TIP

    TIP  shift, and go to state 95


State 60

   11 varDeclaration: VAR declarationList ';' .

    $default  reduce using rule 11 (varDeclaration)


State 61

   13 declarationList: declarationList ',' . ID ':' TIP
   14                | declarationList ',' . varAssign ':' TIP

    ID  shift, and go to state 96

    varAssign  go to state 97


State 62

   16 declarationList: varAssign ':' . TIP

    TIP  shift, and go to state 98


State 63

   12 varDeclaration: CONST_VAR constDeclarationList ';' .

    $default  reduce using rule 12 (varDeclaration)


State 64

   17 constDeclarationList: constDeclarationList ',' . varAssign ':' TIP

    ID  shift, and go to state 38

    varAssign  go to state 99


State 65

   18 constDeclarationList: varAssign ':' . TIP

    TIP  shift, and go to state 100


State 66

   61 functionDef: FUNC ID '(' . listaParams ')' ':' TIP '{' commands '}'

    ID  shift, and go to state 101

    listaParams  go to state 102


State 67

   19 moduleDef: MODULE ID '{' . moduleConstructor moduleState HANDLERS '{' moduleHandlers '}' '}'
   20          | MODULE ID '{' . moduleConstructor moduleState HANDLERS '{' '}' '}'

    CONSTRUCTOR  shift, and go to state 103

    moduleConstructor  go to state 104


State 68

   21 moduleAccess: ID . '.' ID
   22             | ID . '.' functionCall
   42 arithmeticExpression: ID .
   59 functionCall: ID . '(' listaArgs ')'
   60             | ID . '(' ')'

    '.'  shift, and go to state 47
    '('  shift, and go to state 48

    $default  reduce using rule 42 (arithmeticExpression)


State 69

   47 booleanExpression: booleanExpression . BOOL_OPERATION '!' ID
   48                  | booleanExpression . BOOL_OPERATION bool_char_string
   49                  | booleanExpression . BOOL_OPERATION arithmeticExpression
   50                  | booleanExpression . BOOL_OPERATION stringExpression
   51                  | booleanExpression . BOOL_OPERATION comparisonExpression
   71 ifBlock: IF '(' booleanExpression . ')' '{' commands '}'
   72        | IF '(' booleanExpression . ')' '{' commands '}' ELSE '{' commands '}'
   73        | IF '(' booleanExpression . ')' '{' commands '}' elseIfBlock ELSE '{' commands '}'

    BOOL_OPERATION  shift, and go to state 57
    ')'             shift, and go to state 105


State 70

   76 forBlock: FOR '(' varAssign . ';' booleanExpression ';' varAssign ')' '{' commands '}'

    ';'  shift, and go to state 106


State 71
